detect package version history

Version 0.3-0, Oct 1, 2012
    * jags.engine removed, replaced by dcmle dependency.
    * dFormula and checkDesign added with Formula dependency,
      this will replace the old svisitFormula interface
      to allow handling of more complex designs.
    * logdmultinom: simplified version of dmultinom.
    * bymethod: collapses (pools) observations by methodology.

Version 0.2-2, May 2, 2012
    * inst/COPYING file removed (standard license).

Version 0.2-1, November 25, 2011
    * Help pages edited.

Version 0.2-0, October 18, 2011
    * svabu and related functions added.
    * summary: nobs was returned as NULL,
      so AIC was not printed. Now fixed.
    * R (>= 2.13.0) added to DESCRIPTION
      (reported by Uwe Ligges).

Version 0.1-0, September 27, 2011
    * First public release on CRAN.