@@ -5,7 +5,7 @@ Version: 0.3-0
 Date: 2012-10-01
 Author: Peter Solymos, Monica Moreno, Subhash R Lele
 Maintainer: Peter Solymos <solymos@ualberta.ca>
-Depends: R (>= 2.13.0), Formula
+Depends: R (>= 2.13.0), Formula, stats4
 Suggests: dclone, dcmle, pbapply
 Description: The package implements models to analyze
   site occupancy and count data models with detection error.
