@@ -1,0 +1,8 @@
+vcov.cmulti <- 
+function(object, ...) 
+{
+    rv <- object$vcov
+    NAM <- names(coef(object))
+    dimnames(rv) <- list(NAM, NAM)
+    rv
+}
