@@ -7,6 +7,7 @@ Version 0.3-0, Oct 1, 2012
       to allow handling of more complex designs.
     * logdmultinom: simplified version of dmultinom.
     * bymethod: collapses (pools) observations by methodology.
+    * cmulti: new function for conditional multinomial estimation.
 
 Version 0.2-2, May 2, 2012
     * inst/COPYING file removed (standard license).
